--- a/Avionics & Controls/Prop Calc2.ipynb
+++ b/Avionics & Controls/Prop Calc2.ipynb
@@ -157,6 +157,7 @@
     "\n",
     "#Run this if needed to check on data in Pandas\n",
     "#print(df.to_string()) "
+    "#random test"
    ]
   },
   {
