--- a/Avionics & Controls/Prop Calc2.ipynb
+++ b/Avionics & Controls/Prop Calc2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,23 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paste .dat file location :  C:\\Users\\aniru\\Downloads\\PER3_10x10 (2).dat\n",
-      "Paste desired destination file path(filepath/filename.csv) :  C:\\Users\\aniru\\Desktop\\hope.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conversion complete. Data saved to C:\\Users\\aniru\\Desktop\\hope.csv\n",
-      "Cleaned data saved to C:\\Users\\aniru\\Desktop\\hope.csv\n"
+      "Conversion complete. Data saved to C:\\Users\\aniru\\Desktop\\Converted\\22x8Convert.csv\n",
+      "Cleaned data saved to C:\\Users\\aniru\\Desktop\\Converted\\22x8Convert.csv\n"
      ]
     }
    ],
@@ -148,16 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully accessed\n"
+     ]
+    }
+   ],
    "source": [
-    "filename = 'C:/Users/aniru/Desktop/PER3_10x10.csv' #input file path here\n",
-    "df = pd.read_csv(cleaned_csv_path)\n",
+    "filename = \"C:/Users/aniru/Desktop/Converted/15x55Convert.csv\" #input file path here\n",
+    "df = pd.read_csv(filename) #change back to cleaned_csv_path after all have been found\n",
     "\n",
     "#Run this if needed to check on data in Pandas\n",
     "#print(df.to_string()) \n",
-    "#random test"
+    "print(\"Successfully accessed\")"
    ]
   },
   {
@@ -169,30 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RPM: \t\tRow: \t\tThrust:  N\tTorque:  N-m\n",
-      "6000\t\t171\t\t6.936\t\t0.147 \n",
-      "7000\t\t202\t\t9.452\t\t0.197 \n",
-      "8000\t\t233\t\t12.360\t\t0.256 \n",
-      "9000\t\t264\t\t15.663\t\t0.322 \n",
-      "10000\t\t295\t\t19.361\t\t0.396 \n",
-      "11000\t\t326\t\t23.458\t\t0.478 \n"
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "7000\t\t202\t\t6.899\t\t0.577 \n",
+      "8000\t\t233\t\t9.079\t\t0.756 \n"
      ]
     }
    ],
    "source": [
     "thrust_req = 6.25 #25/4\n",
-    "torque_req = .5 #Find KDE motor that fits here; put in KDE motor's torque req\n",
+    "torque_req = 1.84 #Find KDE motor that fits here; put in KDE motor's torque req\n",
     "\n",
-    "print(f'RPM: \\t\\tRow: \\t\\tThrust:  N\\tTorque:  N-m')\n",
+    "print(f'RPM: \\t\\tRow: \\t\\tThrust:  Lbf\\tTorque:  N-m')\n",
     "for row in df.itertuples(): \n",
-    "    thrust_data = row[11]    \n",
+    "    thrust_data = row[8]    \n",
     "    torque_data = row[10]    \n",
     "\n",
     "\n",
@@ -213,45 +209,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Custom Throttle Information based on KDE Data ##"
+    "## NEW Nintendo 3DS XL ##"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Approximate throttle value for propeller size 10\" spinning at 6000 rpm is 63.66%\n"
+      "18x5.5MR\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "6000\t\t171\t\t8.911\t\t0.828 \n",
+      "7000\t\t202\t\t12.247\t\t1.129 \n",
+      "8000\t\t233\t\t16.183\t\t1.484 \n",
+      "\n",
+      "18x6W\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "6000\t\t171\t\t8.524\t\t0.805 \n",
+      "7000\t\t202\t\t11.741\t\t1.095 \n",
+      "8000\t\t233\t\t15.555\t\t1.440 \n",
+      "\n",
+      "18x8\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "6000\t\t171\t\t8.911\t\t0.859 \n",
+      "7000\t\t202\t\t12.259\t\t1.169 \n",
+      "8000\t\t233\t\t16.217\t\t1.537 \n",
+      "\n",
+      "18x8E\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t6.585\t\t0.652 \n",
+      "6000\t\t171\t\t9.559\t\t0.936 \n",
+      "7000\t\t202\t\t13.139\t\t1.277 \n",
+      "8000\t\t233\t\t17.364\t\t1.681 \n",
+      "\n",
+      "18x8W\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t7.350\t\t0.768 \n",
+      "6000\t\t171\t\t10.683\t\t1.102 \n",
+      "7000\t\t202\t\t14.703\t\t1.505 \n",
+      "\n",
+      "19x8E\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t7.874\t\t0.801 \n",
+      "6000\t\t171\t\t11.444\t\t1.152 \n",
+      "7000\t\t202\t\t15.752\t\t1.575 \n",
+      "\n",
+      "19x8W\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t8.816\t\t0.948 \n",
+      "6000\t\t171\t\t12.829\t\t1.363 \n",
+      "\n",
+      "20x8\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t8.839\t\t0.918 \n",
+      "6000\t\t171\t\t12.880\t\t1.320 \n",
+      "7000\t\t202\t\t17.788\t\t1.808 \n",
+      "\n",
+      "20x8E\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "5000\t\t140\t\t9.235\t\t0.964 \n",
+      "6000\t\t171\t\t13.440\t\t1.388 \n",
+      "\n",
+      "20x8W\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "4000\t\t109\t\t6.683\t\t0.754 \n",
+      "5000\t\t140\t\t10.543\t\t1.169 \n",
+      "6000\t\t171\t\t15.365\t\t1.685 \n",
+      "\n",
+      "22x8\n",
+      "RPM: \t\tRow: \t\tThrust:  Lbf\tTorque:  N-m\n",
+      "4000\t\t109\t\t7.733\t\t0.865 \n",
+      "5000\t\t140\t\t12.229\t\t1.340 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "thrust_req = 6.25 #25/4\n",
+    "torque_req = 1.84 #Find KDE motor that fits here; put in KDE motor's torque req\n",
+    "\n",
+    "filename = [\"C:/Users/aniru/Desktop/Converted/18x55MRConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/18x6WConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/18x8Convert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/18x8EConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/18x8WConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/19x8EConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/19x8WConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/20x8Convert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/20x8EConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/20x8WConvert.csv\",\n",
+    "            \"C:/Users/aniru/Desktop/Converted/22x8Convert.csv\"] #input file path here\n",
+    "\n",
+    "\n",
+    "\n",
+    "for name in filename:\n",
+    "    df = pd.read_csv(name) #change back to cleaned_csv_path after all have been found\n",
+    "    testprint = df.iloc[1,0]\n",
+    "    print(testprint + \"\")\n",
+    "    print(f'RPM: \\t\\tRow: \\t\\tThrust:  Lbf\\tTorque:  N-m')\n",
+    "\n",
+    "    for row in df.itertuples(): \n",
+    "        thrust_data = row[8]    \n",
+    "        torque_data = row[10]    \n",
+    "        \n",
+    "    \n",
+    "\n",
+    "        try:\n",
+    "            if ((row[1]) == 'PROP'):\n",
+    "                RPMVal = row[4]\n",
+    "                #print(RPMVal)\n",
+    "            if (float(row[2]) == 0 and float(thrust_data) >= thrust_req and float(torque_data) <= torque_req):  \n",
+    "                print(f'{RPMVal}\\t\\t{row.Index}\\t\\t{thrust_data}\\t\\t{torque_data} ')\n",
+    "                \n",
+    "        except:\n",
+    "            pass\n",
+    "            #print(f\"{row.Index} This is a word\") #Just wont show Nan as well\n",
+    "    print()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting Custom Throttle Information based on KDE Data ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate throttle value for propeller size 22\" spinning at 4000 rpm is 55.96%\n",
+      "Debug: Utiliized prop value 2 in KDE website\n"
      ]
     }
    ],
    "source": [
     "Throttle = [25, 37.5, 50, 62.5, 75, 87.5, 100]\n",
     "\n",
-    "Prop_Size_Test = 10 #Propeller test size from APC (size x pitch)\n",
-    "Prop_Size_1 = 12.5 #from KDE\n",
-    "Prop_Size_2 = 15.5 #from KDE\n",
-    "Prop_Size_3 = 18.5 #from KDE\n",
+    "Prop_Size_Test = 22 #Propeller test size from APC (size x pitch)\n",
     "\n",
-    "apc_rpm = 6000 #Put in APC rpm found from previous section #TODO: automate this from previous values later\n",
+    "Prop_Size_1 = 18.5 #from KDE\n",
+    "Prop_Size_2 = 21.5 #from KDE\n",
+    "#Prop_Size_3 = 24.5 #from KDE\n",
+    "\n",
+    "apc_rpm = 4000 #Put in APC rpm found from previous section #TODO: automate this from previous values later\n",
     "\n",
     "#prop values are debug values\n",
     "if abs(Prop_Size_Test - Prop_Size_1) <= abs(Prop_Size_Test - Prop_Size_2):\n",
-    "    kde_rpm = [3760, 4700, 5370, 5920, 6780, 7810, 8510] #Will have to update for different motor\n",
+    "    kde_rpm = [2560, 3330, 4130, 4940, 5710, 6420, 7030] #Will have to update for different motor\n",
     "    prop = 1\n",
     "elif abs(Prop_Size_Test - Prop_Size_1) > abs(Prop_Size_Test - Prop_Size_2):\n",
-    "    kde_rpm = [2690, 3490, 4330, 5110, 5820, 6500, 7040] #Will have to update for different motor\n",
+    "    kde_rpm = [2140, 2960, 3690, 4340, 4930, 5250, 5830] #Will have to update for different motor\n",
     "    prop = 2\n",
-    "elif abs(Prop_Size_Test - Prop_Size_2) <= abs(Prop_Size_Test - Prop_Size_3):\n",
-    "    kde_rpm = [2690, 3490, 4330, 5110, 5820, 6500, 7040] #Will have to update for different motor\n",
-    "    prop = 2\n",
-    "elif abs(Prop_Size_Test - Prop_Size_2) > abs(Prop_Size_Test - Prop_Size_3):\n",
-    "    kde_rpm = [2350, 3170, 3900, 4550, 5200, 5690, 6130] #Will have to update for different motor\n",
-    "    prop = 3\n",
+    "#elif abs(Prop_Size_Test - Prop_Size_2) <= abs(Prop_Size_Test - Prop_Size_3):\n",
+    "    #kde_rpm = [1580, 2050, 2570, 3120, 3660, 4170, 4630] #Will have to update for different motor\n",
+    "    #prop = 2\n",
+    "#elif abs(Prop_Size_Test - Prop_Size_2) > abs(Prop_Size_Test - Prop_Size_3):\n",
+    "    #kde_rpm = [1430, 1940, 2470, 3010, 3500, 3960, 4370] #Will have to update for different motor\n",
+    "    #prop = 3\n",
     "else:\n",
     "    print(\"XD\")\n",
     " \n",
@@ -259,7 +385,7 @@
     "Custom_Throttle = np.interp(apc_rpm, kde_rpm, Throttle)\n",
     "print(f'Approximate throttle value for propeller size {Prop_Size_Test}\\\" spinning at {apc_rpm} rpm is {Custom_Throttle:.02f}%')\n",
     "\n",
-    "#print(f'Debug: Utiliized prop value {prop} in KDE website')\n",
+    "print(f'Debug: Utiliized prop value {prop} in KDE website')\n",
     "\n"
    ]
   },
@@ -273,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
